@@ -227,7 +227,3 @@ Dist::Zilla::Plugin::Test::ReportPrereqs = 0
 Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
-
-[Prereqs]
--phase = test
-Dist::Zilla::Util::Test::KENTNL = 1.003001
