@@ -57,6 +57,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
+
 0.002001 2014-08-29T09:56:30Z
  [Changed / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.001 → 1.003001
