@@ -2,21 +2,17 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::More tests => 2;
 
 # ABSTRACT: A basic test
 
-use Test::DZil qw( simple_ini );
-use Dist::Zilla::Util::Test::KENTNL 1.001 qw( dztest );
-use Test::Differences;
+use Test::DZil qw( simple_ini Builder );
 
 my (@conditions) = '$ENV{dometa}';
 
 sub mktest {
-  my $t = dztest();
-  $t->add_file(
-    'dist.ini',
-    simple_ini(
+  my $files = {
+    'source/dist.ini' => simple_ini(
       [
         'if' => {
           dz_plugin  => 'MetaConfig',
@@ -24,23 +20,27 @@ sub mktest {
         }
       ],
     )
-  );
-  $t->build_ok;
-  return $t;
+  };
+  my $zilla = Builder->from_config( { dist_root => 'invalid' }, { add_files => $files } );
+  $zilla->chrome->logger->set_debug(1);
+  $zilla->build;
+  return $zilla;
 }
-
-subtest 'env = off' => sub {
+{
   delete local $ENV{dometa};
-  my $t = mktest();
-  ok( !exists $t->distmeta->{x_Dist_Zilla}, 'no x_Dist_Zilla key' );
-};
-subtest 'env = on' => sub {
+  my $zilla = mktest();
+  ok( !exists $zilla->distmeta->{x_Dist_Zilla}, 'no x_Dist_Zilla key w/ env=off' );
+}
+{
   local $ENV{dometa} = 1;
-  my $t = mktest();
-  $t->meta_path_deeply(
-    '/x_Dist_Zilla/plugins/*[ value->{class} !~ /Dist::Zilla::Plugin::FinderCode/ ]/*[key eq q[class]]',
-    [ 'Dist::Zilla::Plugin::MetaConfig', 'Dist::Zilla::Plugin::if', ],
-  );
-};
+  my $zilla = mktest();
 
-done_testing;
+  is_deeply(
+    [
+      map  { $_->{class} }
+      grep { $_->{class} ne 'Dist::Zilla::Plugin::FinderCode' } @{ $zilla->distmeta->{x_Dist_Zilla}->{plugins} }
+    ],
+    [ 'Dist::Zilla::Plugin::MetaConfig', 'Dist::Zilla::Plugin::if', ],
+    "Expected plugins w/ env=on",
+  );
+}
