@@ -2,35 +2,34 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::More tests => 1;
 
 # ABSTRACT: A basic test
 
-use Test::DZil qw( simple_ini );
-use Dist::Zilla::Util::Test::KENTNL 1.001 qw( dztest );
-use Test::Differences;
-
-my $t = dztest();
-
-# if you ever have a use for this, you're crazy.
-
-$t->add_file(
-  'dist.ini',
-  simple_ini(
+use Test::DZil qw( simple_ini Builder );
+my $files = {
+  'source/dist.ini' => simple_ini(
     [
       'if::not' => {
         dz_plugin      => 'if::not',
         dz_plugin_name => "nestedif",
         conditions     => "undef",
-        '>'            => [ 'dz_plugin = MetaConfig', '?= undef', ]
+
+        # if you ever have a use for this, you're crazy.
+        '>' => [ 'dz_plugin = MetaConfig', '?= undef', ]
       }
     ]
   )
-);
-$t->build_ok;
+};
 
-$t->meta_path_deeply(
-  '/x_Dist_Zilla/plugins/*[ value->{class} !~ /Dist::Zilla::Plugin::FinderCode/ ]/*[key eq q[class]]',
+my $zilla = Builder->from_config( { dist_root => 'invalid' }, { add_files => $files } );
+$zilla->chrome->logger->set_debug(1);
+$zilla->build;
+
+is_deeply(
+  [
+    map { $_->{class} } grep { $_->{class} ne 'Dist::Zilla::Plugin::FinderCode' } @{ $zilla->distmeta->{x_Dist_Zilla}->{plugins} }
+  ],
   [ 'Dist::Zilla::Plugin::MetaConfig', 'Dist::Zilla::Plugin::if::not', 'Dist::Zilla::Plugin::if::not', ],
+  "Expected plugins",
 );
-done_testing;
